# clasificador_web

./: README.txt  clasification_web.py  pyproject.toml  train_model.ipynb
