[tool.poetry]
name = "linkscribe"
version = "0.1.0"
description = ""
authors = ["Hardy Galvis Pedraza"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "^2.1.0"
numpy = "^1.25.2"
seaborn = "^0.12.2"
matplotlib = "^3.7.3"
scikit-learn = ">= 1.0.0"
jupyter = "^1.0.0"
notebook = "^7.0.3"
nltk = "^3.8.1"
imblearn = "^0.0"
imbalanced-learn = "^0.11.0"
sklearn = "^0.0.post10"
streamlit = "^1.20.0"
joblib = "^1.2.0"
fastapi = "^0.95.0"
fastapi-utils = "^0.2.1"
uvicorn = "^0.21.1"
pillow = "^9.4.0"
python-decouple = "^3.8"
beautifulsoup4 = "^4.11.2"
spacy = "^3.5.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
